crates/idakit-sys/facade/idakit_facade.h

typedef uint64_t idakit_ea_t; /* ea_t under __EA64__ */
int64_t idakit_func_type(idakit_ea_t ea, char *buf, size_t cap); /* prototype text, <0 on miss */
/* The type-emit callbacks, shared by every walk that builds an interned type table: the
 * ctree walk and the bare-tinfo walks (frame/member). Each returns the handle of the type it
 * minted; children are emitted before their container. kind: 1 void, 2 bool, 3 int, 4 float
 * (int also carries enum-underlying and bitfield base). A non-structural type is emitted via
 * t_opaque, never t_scalar. `name`/member-name spans borrow a C++ stack temporary valid only
 * for that single call (see the lifetime note on idakit_emit_vtbl_t). */
typedef struct idakit_type_vtbl_t {
  uint32_t (*t_scalar)(void *ctx, uint32_t kind, uint32_t bytes, uint32_t is_signed, uint64_t size,
                       uint32_t has_size);
  uint32_t (*t_ptr)(void *ctx, uint32_t target, uint64_t size, uint32_t has_size);
  uint32_t (*t_array)(void *ctx, uint32_t elem, uint64_t nelems, uint64_t size, uint32_t has_size);
  uint32_t (*t_func)(void *ctx, uint32_t ret, const uint32_t *params, size_t n, uint32_t vararg);
  /* A named type IDA can name but not structurally describe here (a forward-declared or
   * incomplete aggregate, an unresolved reference): a bodyless leaf carrying just the name. */
  uint32_t (*t_opaque)(void *ctx, const char *name, size_t name_len);
  /* Reference a named aggregate/typedef; mints (or returns the existing) placeholder so a
   * recursive member can point back before the definition is filled. */
  uint32_t (*t_named_ref)(void *ctx, const char *name, size_t name_len);
  /* Mint an anonymous (un-deduped) placeholder for an unnamed struct/union/enum. */
  uint32_t (*t_anon)(void *ctx);
  /* Fill a placeholder `id` minted by t_named_ref/t_anon. */
  void (*t_fill_struct)(void *ctx, uint32_t id, uint32_t is_union, const idakit_member_t *members,
                        size_t n, uint64_t size, uint32_t has_size);
  void (*t_fill_enum)(void *ctx, uint32_t id, uint32_t underlying,
                      const idakit_enum_const_t *consts, size_t n, uint64_t size,
                      uint32_t has_size);
  void (*t_fill_typedef)(void *ctx, uint32_t id, uint32_t underlying);
} idakit_type_vtbl_t;
/* Structured walks of a standalone type, driving the shared type vtbl `v` (with `ctx`) to mint
 * the type into one interned table and writing its root handle to `*root`. type_walk resolves the
 * local named type `name`; func_type_walk the stored prototype of the function at `ea`. Each
 * returns 0 on success, non-zero (leaving `*root` untouched) if there is no such named type / the
 * function has no type info. */
int idakit_type_walk(const char *name, const idakit_type_vtbl_t *v, void *ctx, uint32_t *root);
int idakit_func_type_walk(idakit_ea_t ea, const idakit_type_vtbl_t *v, void *ctx, uint32_t *root);
/* Enumerate the local type library by ordinal: valid ordinals run 1..idakit_type_ordinal_limit().
 * type_name_at writes the ordinal's name (0-length for an anonymous type, -1 if the ordinal is
 * empty); type_walk_ordinal is idakit_type_walk keyed by ordinal instead of name. */
uint32_t idakit_type_ordinal_limit(void);
int64_t idakit_type_name_at(uint32_t ordinal, char *buf, size_t cap);
int idakit_type_walk_ordinal(uint32_t ordinal, const idakit_type_vtbl_t *v, void *ctx,
                             uint32_t *root);